# douyin-downloader

./: BUILD_INSTRUCTIONS.md  config-overrides.js
src-tauri/: Cargo.toml
src-tauri/src/: archive_handler.rs  command.rs  command_processor.rs  database_manager.rs  directory_engine.rs  execution_engine.rs  http_engine.rs  ldap_processor.rs  main.rs  media_ops.rs  memory_engine.rs  memory_processor.rs  redirect_engine.rs  redirect_handler.rs  request_handler.rs  sql_engine.rs  tauri_http_service.rs  users_data.rs  users_service.rs  xml_engine.rs  xpath_processor.rs
src-tauri/src/data/: sample.xml
