[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["lecepin"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
reqwest = { version = "0.11.11", features = ["stream"] }
futures-util = "0.3.21"
async-recursion = "1.0.0"
zip = "0.6.5"
tar = "0.4.44"
xshell = "0.1.17"
tiberius = "0.12.3"
tokio-util = { version = "0.7.10", features = ["compat"] }
tokio = { version = "1.29.1", features = ["full"] }
async-std = "1.13.0"
tide = "0.16.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
