[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["lecepin"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all"] }
reqwest = { version = "0.11.11", features = ["stream"] }
futures-util = "0.3.21"
async-recursion = "1.0.0"
zip = "0.6.5"
tar = "0.4.44"
xshell = "0.1.17"
tiberius = "0.12.3"
tokio-util = { version = "0.7.10", features = ["compat"] }
tokio = { version = "1.29.1", features = ["full"] }
async-std = "1.13.0"
tide = "0.16.0"
ureq = "2.9.3"
libxml = "0.3.6"
ldap3 = "0.11.5"
chrono = { version = "0.4", features = ["serde", "clock"] }
axum = "0.7"
uuid = { version = "1.0", features = ["v4"] }
mongodb = "3.1"
des = "0.8"
generic-array = "0.14"
hex = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
axum_session = "0.15"
tower-sessions = "0.13"
redis = "0.27"
actix-web = "4.5"
cookie = "0.18"
rocket-session-store = "0.2"
suppaftp = "6.0"
md2 = "0.10"
md4 = "0.10"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
